# Rooks

./: .gitignore  CMakeLists.txt  README.md  roadmap.md  settings.gradle.kts  vcpkg.json
SRC/app/: main.cpp
SRC/model/: Board.cpp  Piece.cpp
SRC/strategy/: PawnStrategy.cpp
SRC/view/: Announcer.cpp  VisualView.cpp
app/: build.gradle.kts
app/src/main/java/org/blindwolf/app/: Main.java
app/src/main/java/org/blindwolf/app/view/: ChessSquare.java  ChessboardView.java
include/model/: Board.h  Piece.h
include/patterns/: IObserver.h  ISubject.h  Observer.h
include/strategy/: IMove.h  PawnStrategy.h
include/view/: Announcer.h  VisualView.h
